tests/error/default_arguments.c
// fail "(3,19): Error at '=': Cannot assign to function parameter. Default arguments are unsupported."

int main(int argc = 1, char *argv[]){
    
}
